# gnome-utils

./: .cvsignore  .gitignore  AUTHORS  BUGS  ChangeLog  ChangeLog.dictionary-work  HACKING  MAINTAINERS  Makefile.am  NEWS  README  README.commits  README.releasing  THANKS  acconfig.h  acinclude.m4  app-docs.make  autogen.sh  config.h.in  configure.ac  configure.in  gnome-utils.doap  gnome-utils.spec  gnome-utils.spec.in  omf.make
edit-menus/: .cvsignore  ChangeLog  Makefile.am  Makefile.old  TODO  debian-parser.c  edit-menus.c  icewm-parser.c  icewm-saver.c  icewm.h  iconbrowse.c  iconbrowse.h  is_image.c  is_image.h  menu.c  menu.h  menuentrywiz.c  menuentrywiz.h  menutree.c  menutree.h  parser.h  run_command.c  run_command.h  saver.h  test1.c  wmconfig2desktop.pl
exe-handler/: .cvsignore  ChangeLog  Makefile.am  gnome-exe-handler.c  gnome-exe.applications  gnome-exe.keys
find-file/: .cvsignore  ChangeLog  Makefile.am  nsearch.desktop  nsearch.scm
gcalc/: .cvsignore  ChangeLog  Makefile.am  gcalc.1  gcalc.c  gcalc.desktop  gcalc.desktop.in  gnome-calc.c  gnome-calc.h  gnome-calculator.1  gnome-calculator.desktop.in  sr.c
gcalc/doc/: Makefile.am
gcalc/help/: Makefile.am
gcharmap/: .cvsignore  AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  README  TODO  gcharmap.desktop  gcharmap.desktop.in  gcharmap.schemas  gnome-character-map.desktop.in
gcharmap/pixmaps/: Character_Map.xpm  Makefile.am  charmap_24.xpm  charmap_big.xpm  gcharmap.xpm  gnome-character-map.xpm  logo.xpm
gcharmap/src/: .cvsignore  Makefile.am  asciiselect.c  asciiselect.h  callbacks.c  callbacks.h  gnome-character-map.1  interface.c  interface.h  main.c  menus.c  menus.h  notifiers.c
gdialog/: .cvsignore  ChangeLog  Makefile.am  checklist.c  dialog.c  dialog.h  gdialog.1  guage.c  inputbox.c  menubox.c  mouse.c  msgbox.c  rc.c  textbox.c  util.c  yesno.c
gdialog/help/: Makefile.am
gdiskfree/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  df.c  gdiskfree.c  gdiskfree.desktop  gdiskfree_app.c  gdiskfree_app.h  gdiskfree_menus.c  gdiskfree_menus.h  gdiskfree_options.c  gdiskfree_options.h  mountlist.c  save-cwd.c  util.c  util.h  xgetcwd.c
gdiskfree/doc/: Makefile.am
gncal/gnomecard/: .cvsignore  ChangeLog  Example.gcrd  Makefile.am  addresslist.c  addresslist.h  canvas.c  canvas.h  card.c  card.h  cardtypes.h  columnhdrs.c  columnhdrs.h  del.c  del.h  dialog.c  dialog.h  gnome-pim-impl.c  gnomecard.c  gnomecard.gnorba  gnomecard.h  images.h  init.c  init.h  list.c  list.h  my.c  my.h  pairs.h  phonelist.c  phonelist.h  pix.c  pix.h  sort.c  sort.h  tree.c  tree.h  type_name.h
gnome-dictionary/data/: .cvsignore  GNOME_DictionaryApplet.server.in.in  GNOME_DictionaryApplet.xml  Makefile.am  french.desktop.in  gnome-dictionary-preferences.glade  gnome-dictionary-preferences.ui  gnome-dictionary-ui.xml  gnome-dictionary.1  gnome-dictionary.desktop.in  gnome-dictionary.desktop.in.in  gnome-dictionary.schemas.in
gnome-dictionary/libgdict/: .cvsignore  Makefile.am  gdict-1.0-uninstalled.pc.in  gdict-1.0.pc.in  gdict-client-context.c  gdict-client-context.h  gdict-context.c  gdict-context.h  gdict-database-chooser.c  gdict-database-chooser.h  gdict-debug.c  gdict-debug.h  gdict-defbox.c  gdict-defbox.h  gdict-entry.c  gdict-entry.h  gdict-marshal.list  gdict-private.h  gdict-source-chooser.c  gdict.h  (+11 more)
gnome-find/: .cvsignore  ChangeLog  Makefile.am  TODO  ftypes.c  getdate.y  glob.c  gnome-find.c  gnome-find.h  nfind.c  specs.c
gpostit/: .cvsignore  Makefile.am  gpostit.desktop  gpostit.m
gsearchtool/: .cvsignore  .gitignore  ChangeLog  Makefile.am  gnome-search-tool.1  gnome-search-tool.desktop.in  gnome-search-tool.schemas  gnome-search-tool.schemas.in  gsearchtool-alert-dialog.c  gsearchtool-alert-dialog.h  gsearchtool-callbacks.c  gsearchtool-callbacks.h  gsearchtool-spinner.c  gsearchtool-spinner.h  gsearchtool-support.c  gsearchtool-support.h  gsearchtool.c  gsearchtool.desktop  gsearchtool.desktop.in  gsearchtool.h  outdlg.c  outdlg.h  unixcmd.c  unixcmd.h
gstripchart/: .cvsignore  ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  gstripchart.c  gstripchart.conf  gstripchart.desktop  gstripchart.desktop.in  gstripchart.html  gstripchart_applet.desktop  gstripchart_applet.desktop.in  gstripchart_applet.gnorba
gtt/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  app.c  ch-dialogs.html  ch-intro.html  ch-main.html  ch-working.html  clist.c  configure.in  ctree.c  ctree.h  cur-proj.h  design.txt  dialog.c  dialog.h  err-throw.c  err-throw.h  err.c  file-io.c  file-io.h  ghtml.c  ghtml.h  gtt-db.html  gtt-db.sgml  gtt-features.h  gtt.1  gtt.desktop  gtt.h  gtt.sgml  gtt.text  gtthelp.c  gtthelp.h  idle-timer.c  idle-timer.h  index.html  (+41 more)
libeggsmclient/: Makefile.am  README
logview/: .cvsignore  .gitignore  ChangeLog  Makefile.am  TODO  about.c  about.h  actions.c  actions.h  calendar.c  calendar.h  config.c  configdata.h  desc_db.c  desc_db.h  gedit-output-window.c  gedit-output-window.h  gnome-system-log-actions.db  gnome-system-log-descript.db  gnome-system-log-regexp.db  gnome-system-log-security.in  gnome-system-log.1  gnome-system-log.desktop.in  gnome-system-log.desktop.in.in  gtkmessagearea.c  gtkmessagearea.h  info.c  info.h  log_repaint.c  log_repaint.h  loglist.c  loglist.h  logrtns.c  logrtns.h  logview-about.h  logview-app.c  logview-app.h  logview-descript.db  logview-filter-manager.c  logview-filter-manager.h  (+39 more)
meat-grinder/: .cvsignore  ChangeLog  Makefile.am  archive-generator.1  archive-generator.desktop.in  meat-grinder.1  meat-grinder.c  meat-grinder.desktop  meat-grinder.desktop.in
notepad/: .cvsignore  ChangeLog  Makefile.am  Notepad.desktop  Notepad.desktop.in  notepad.scm
stripchart/: .cvsignore  ChangeLog  Makefile.am  TODO  chart-app.c  chart-app.h  chart.c  chart.h  eval.c  eval.h  params.c  prefs.c  strip.c  strip.h  stripchart-applet.c  stripchart-applet.desktop  stripchart-applet.desktop.in  stripchart.c  stripchart.conf  stripchart.desktop  stripchart.desktop.in  stripchart.h  stripchart.params  utils.c  utils.h
(+777 files in other folders)
